network/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: happy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: test 
spec:
  rules:
  - host: happy.k8s.io
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: nodeport-svc
          servicePort: 8080
      - path: /echoserver
        backend:
          serviceName: echoserver-svc
          servicePort: 8080
